--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
         <link rel="stylesheet" href="stiil.css" />
     </head>
     <body>
+        <h1>Practice session #6</h1>
+        <p>
+            During this practice, we covered the following 
+            GitHub project management tools:
+        </p>
+        <ol>
+            <li>Issues</li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
         <script src="kood.js"></script>
     </body>
 </html>
