--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li></li>
             <li></li>
         </ol>
+        <img src="images/logo.jpg" alt="Logo" class="logo" />
         <script src="kood.js"></script>
     </body>
 </html>
