--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <li></li>
         </ol>
         <img src="images/logo.jpg" alt="Logo" class="logo" />
+        <p class="centered">
+            <a href="google.com" class="button">To the course website</a>
+        </p>
         <script src="kood.js"></script>
     </body>
 </html>
