--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <p class="centered">
             <a href="google.com" class="button">To the course website</a>
         </p>
+        <p class="centered">
+            Gaudeamus _<br />
+            Iuvenes _ sumus.<br />
+            _ iucundam iuventutem<br />
+            Post _ senectutem<br />
+            Nos habebit _. 
+        </p>
         <script src="kood.js"></script>
     </body>
 </html>
