--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li></li>
             <li></li>
         </ol>
-        <img src="images/logo.jpg" alt="Logo" class="logo" />
+        <img src="images/logo.png" alt="Logo" class="logo" />
         <p class="centered">
             <a href="google.com" class="button">To the course website</a>
         </p>
