--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Praktikum üks</title>
-        <link rel="stylesheet" href="stiil.css" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <h1>Practice session #6</h1>
