--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ol>
         <img src="images/logo.png" alt="Logo" class="logo" />
         <p class="centered">
-            <a href="google.com" class="button">To the course website</a>
+            <a href="https://courses.cs.ut.ee/2019/cse/spring/Main/HomePage" class="button">To the course website</a>
         </p>
         <p class="centered">
             Gaudeamus _<br />
