Revert "Fixed javascript URL from kood.js to scripts.js in index.html  #2"

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
             Post _ senectutem<br />
             Nos habebit _. 
         </p>
-        <script src="scripts.js"></script>
+        <script src="kood.js"></script>
     </body>
 </html>
