Fixed issue nr.20

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <a href="https://courses.cs.ut.ee/2019/cse/spring/Main/HomePage" class="button">To the course website</a>
         </p>
         <p class="centered">
-            Gaudeamus _<br />
-            Iuvenes _ sumus.<br />
-            _ iucundam iuventutem<br />
-            Post _ senectutem<br />
-            Nos habebit _. 
+            Gaudeamus igitur<br />
+            Juvenes dum sumus.<br />
+            Post jucundam juventutem<br />
+            Post molestam senectutem<br />
+            Nos habebit humus. 
         </p>
         <script src="scripts.js"></script>
     </body>
