Added list objects to index.html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         </p>
         <ol>
             <li>Issues</li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Pull request</li>
+            <li>Project board</li>
+            <li>Wiki</li>
         </ol>
         <img src="images/logo.png" alt="Logo" class="logo" />
         <p class="centered">
