--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Praktikum üks</title>
+        <title>Praktikum kuus</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
